Finished the db

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,7 +1,15 @@
 
 <body style="background-color:#cccccc; color:blue; font-family:Arial; font-size:18; height:100vh; text-align:center;">
 	<div style="margin-top:5%">
-		<h1>Testing Initial Operation</h1>
+		<h1>{{title}}</h1>
 		<p style="color:black;">This is the initial NWS Index</p>
 	</div>
+
+	Index: {{post_data}}<br>
+
+	<a href="/">Home Page</a>&nbsp
+	<a href="/about">About Us</a>&nbsp
+	<a href="/blog">Blog</a>&nbsp
+	<a href="/pricing">Services</a>
+	<a href="/gallery">Users</a>
 </body>
