Wrote model functions to create, delete and update db

--- a/templates/user/about.html
+++ b/templates/user/about.html
@@ -2,11 +2,12 @@
 	<h1 style="color:blue">{{title}}</h1>
 	<h4>About Us</h4>
 	<p>{{about}}</p>
-	<h5>Index: {{post_data}}</h5>
+	<h5>Index: {{btn_data}}</h5>
 
 	<a href="/">Home Page</a>&nbsp
 	<a href="/about">About Us</a>&nbsp
 	<a href="/blog">Blog</a>&nbsp
-	<a href="/pricing">Services</a>
+	<a href="/products">Services</a>&nbsp
+	<a href="/contact">Contact</a>&nbsp
 	<a href="/gallery">Users</a>
 </body>
