--- a/templates/user/blog.html
+++ b/templates/user/blog.html
@@ -14,9 +14,12 @@
 		</ul>
 	</div>
 
+	<p>Index: {{btn_data}}</p>
+
 	<a href="/">Home Page</a>&nbsp
 	<a href="/about">About Us</a>&nbsp
 	<a href="/blog">Blog</a>&nbsp
-	<a href="/pricing">Services</a>
+	<a href="/products">Services</a>&nbsp
+	<a href="/contact">Contact</a>&nbsp
 	<a href="/gallery">Users</a>
 </body>
