--- a/templates/user/gallery.html
+++ b/templates/user/gallery.html
@@ -2,7 +2,7 @@
 	<h1 style="color:red">{{title}}</h1>
 	<h3 style="color:green;">Users</h3>
 
-	<div style="width:400px; margin:auto;">
+	<div style="width:650px; margin:auto;">
 		<ul style="text-align:left;">
 			{% for u in users %}
 			<li>
@@ -17,6 +17,7 @@
 	<a href="/">Home Page</a>&nbsp
 	<a href="/about">About Us</a>&nbsp
 	<a href="/blog">Blog</a>&nbsp
-	<a href="/pricing">Services</a>
+	<a href="/products">Services</a>&nbsp
+	<a href="/contact">Contact</a>&nbsp
 	<a href="/gallery">Users</a>
 </body>
