--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -5,11 +5,12 @@
 		<p style="color:black;">This is the initial NWS Index</p>
 	</div>
 
-	Index: {{post_data}}<br>
+	Index: {{btn_data}}<br>
 
 	<a href="/">Home Page</a>&nbsp
 	<a href="/about">About Us</a>&nbsp
 	<a href="/blog">Blog</a>&nbsp
-	<a href="/pricing">Services</a>
+	<a href="/products">Services</a>&nbsp
+	<a href="/contact">Contact</a>&nbsp
 	<a href="/gallery">Users</a>
 </body>
