Started adding admin pages

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -7,6 +7,15 @@
 
 	Index: {{btn_data}}<br>
 
+	<div>
+		Login
+		<form action="/admin_home" method="post" id="login_form">
+			<input type="email" name="email" id="email" placeholder="Email" required>
+			<input type="password" name="password" id="password" placeholder="Password" required>
+			<input type="submit" value="submit">
+		</form>
+	</div>
+
 	<a href="/">Home Page</a>&nbsp
 	<a href="/about">About Us</a>&nbsp
 	<a href="/blog">Blog</a>&nbsp
